# QA-Agent-Ecosystem

./: .gitignore  GUIDE.md  README.md  pyproject.toml  requirements.txt
examples/: run_orchestrator.py  run_single_agent.py  sample_pbi.md
qa_ecosystem/: __init__.py  cli.py  config.py  models.py  models.yaml  runner.py
qa_ecosystem/agents/: __init__.py  ai_test_architect.py  bug_pattern_analyst.py  regression_optimizer.py  requirements_analyst.py  synthetic_data_designer.py  test_case_generator.py  test_manager.py  test_oracle_creator.py  test_results_analyst.py  testware_creator.py
qa_ecosystem/templates/: __init__.py  ai_test_architect.yaml  bug_pattern_analyst.yaml  regression_optimizer.yaml  requirements_analyst.yaml  synthetic_data_designer.yaml  test_case_generator.yaml  test_manager.yaml  test_oracle_creator.yaml  test_results_analyst.yaml  testware_creator.yaml
